@@ -1,37 +1,48 @@
 package net.modtale.controller.system;
 
+import com.mongodb.MongoException;
+import jakarta.validation.constraints.Pattern;
+import net.modtale.model.dto.response.system.ServiceStatusView;
+import net.modtale.model.dto.response.system.StatusHistoryPointView;
+import net.modtale.model.dto.response.system.SystemStatusView;
 import net.modtale.model.system.StatusHistory;
 import net.modtale.repository.system.StatusHistoryRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Scheduled;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import software.amazon.awssdk.core.exception.SdkException;
 import software.amazon.awssdk.services.s3.S3Client;
 
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
+@Validated
 @RequestMapping("/api/v1/status")
 public class StatusController {
 
     private static final Logger logger = LoggerFactory.getLogger(StatusController.class);
 
-    @Autowired private MongoTemplate mongoTemplate;
-    @Autowired private S3Client s3Client;
-    @Autowired private StatusHistoryRepository historyRepository;
+    private final MongoTemplate mongoTemplate;
+    private final S3Client s3Client;
+    private final StatusHistoryRepository historyRepository;
+
+    public StatusController(MongoTemplate mongoTemplate, S3Client s3Client, StatusHistoryRepository historyRepository) {
+        this.mongoTemplate = mongoTemplate;
+        this.s3Client = s3Client;
+        this.historyRepository = historyRepository;
+    }
 
     @EventListener(ApplicationReadyEvent.class)
     public void onStartup() {
@@ -44,17 +55,22 @@ public class StatusController {
     }
 
     @GetMapping
-    public ResponseEntity<Map<String, Object>> getSystemStatus(@RequestParam(defaultValue = "24h") String range) {
+    public ResponseEntity<SystemStatusView> getSystemStatus(
+            @RequestParam(defaultValue = "24h")
+            @Pattern(regexp = "24h|30d", message = "Status ranges must be 24h or 30d.")
+            String range
+    ) {
         StatusHistory latest = historyRepository.findTopByOrderByTimestampDesc();
 
         if (latest == null) {
             latest = performHealthCheck();
         }
 
-        List<Map<String, Object>> services = new ArrayList<>();
-        services.add(Map.of("id", "api", "name", "API Gateway", "status", latest.getOverallStatus(), "latency", latest.getApiLatency()));
-        services.add(Map.of("id", "database", "name", "Database (Atlas)", "status", "operational", "latency", latest.getDbLatency()));
-        services.add(Map.of("id", "storage", "name", "Storage (R2)", "status", "operational", "latency", latest.getStorageLatency()));
+        List<ServiceStatusView> services = List.of(
+                new ServiceStatusView("api", "API Gateway", latest.getOverallStatus(), latest.getApiLatency()),
+                new ServiceStatusView("database", "Database (Atlas)", "operational", latest.getDbLatency()),
+                new ServiceStatusView("storage", "Storage (R2)", "operational", latest.getStorageLatency())
+        );
 
         LocalDateTime since;
         if ("30d".equals(range)) {
@@ -74,16 +90,20 @@ public class StatusController {
             history = downsampled;
         }
 
-        return ResponseEntity.ok(Map.of(
-                "overall", latest.getOverallStatus(),
-                "services", services,
-                "timestamp", latest.getTimestamp().toEpochSecond(ZoneOffset.UTC) * 1000,
-                "history", history.stream().map(h -> Map.of(
-                        "time", h.getTimestamp().toEpochSecond(ZoneOffset.UTC) * 1000,
-                        "api", h.getApiLatency(),
-                        "db", h.getDbLatency(),
-                        "storage", h.getStorageLatency()
-                )).collect(Collectors.toList())
+        List<StatusHistoryPointView> historyPoints = history.stream()
+                .map(h -> new StatusHistoryPointView(
+                        h.getTimestamp().toEpochSecond(ZoneOffset.UTC) * 1000,
+                        h.getApiLatency(),
+                        h.getDbLatency(),
+                        h.getStorageLatency()
+                ))
+                .toList();
+
+        return ResponseEntity.ok(new SystemStatusView(
+                latest.getOverallStatus(),
+                services,
+                latest.getTimestamp().toEpochSecond(ZoneOffset.UTC) * 1000,
+                historyPoints
         ));
     }
 
@@ -94,7 +114,7 @@ public class StatusController {
         long dbStart = System.currentTimeMillis();
         try {
             mongoTemplate.executeCommand("{ ping: 1 }");
-        } catch (Exception e) {
+        } catch (MongoException e) {
             logger.error("Health Check: Database failed", e);
             allOperational = false;
         }
@@ -103,7 +123,7 @@ public class StatusController {
         long storageStart = System.currentTimeMillis();
         try {
             s3Client.listBuckets();
-        } catch (Exception e) {
+        } catch (SdkException e) {
             logger.error("Health Check: Storage failed", e);
             allOperational = false;
         }
